<resources>
    <string name="app_name">Signify_CH2_PS093</string>
    <string name="login">Login</string>
    <string name="header2">Selamat Datang di Signify</string>
    <string name="emailTv">Email</string>
    <string name="Password">Password</string>
    <string name="errorPassword">Password tidak boleh kurang dari 8 karakter !</string>
    <string name="Masuk">Masuk</string>
    <string name="questionLogin">Belum punya akun ?</string>
    <string name="daftarQuestion">Daftar</string>
    <string name="signify">Signify</string>
    <string name="signIn">Daftar</string>
    <string name="ayoDaftar">Ayo daftarkan dirimu terlebih dahulu !</string>
    <string name="username">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="questionSignIn">Sudah punya akun ?</string>

    <!--activity_materi_grup-->
    <string name="progress_bar_text">---</string>
    <string name="tv_materi">Materi 1</string>
    <string name="tv_konten_materi">Kata Kerja</string>
    <string name="tv_message_materi">Lanjutkan Belajarmu</string>
    <string name="btn_lanjut_belajar">Lanjut belajar</string>
    <string name="tv_title_detail_item">kata sapaan</string>

    <!--item_materi-->
    <string name="tv_title_materi">kata sapaan</string>
    <string name="tv_subtitle_materi">20 kosakata</string>
    <string name="content_description">content description</string>
    <string name="mari_belajar_bahasa_isyarat">Mari Belajar di Signify!</string>
    <string name="lakukan_apa_hari_ini">Lakukan apa hari ini?</string>
    <string name="selalu_tambahkan_pengetahuanmu">Selalu tambahkan pengetahuanmu !</string>
    <string name="ayo_belajar_bahasa_isyarat">Ayo belajar bahasa isyarat</string>
    <string name="informasi_terkini">Informasi Terkini !</string>
    <string name="jangan_lewatkan_berita_terkini_dari_signify">Jangan lewatkan berita terkini dari Signify</string>
    <string name="tv_title_level">Level 1</string>
    <string name="tv_subtitle_level">2 materi kosa kata</string>
    <string name="tv_no_level">1</string>
    <string name="tv_title_detail_materi">Title</string>
    <string name="tv_description_materi">description</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Ketik jawaban anda...</string>
    <string name="tv_message_result_quiz">Selamat! \n Skor Kamu Adalah</string>
    <string name="btn_ok_quiz_result">OK</string>
    <string name="tv_score">100</string>
    <string name="tv_title_quiz_result">Quiz Result</string>
    <string name="signup_succeed">Berhasil Daftar</string>
    <string name="continue_login">Lanjut</string>
    <string name="detail">Detail</string>


    <string name="tv_title_item_detail_home">Materi\nBahasa\nIsyarat</string>
    <string name="logout">Logout</string>
    <!--list card home-->
    <string-array name="data_item_home_title">
        <item>Materi\nBahasa\nIsyarat</item>
        <item>Quiz\nBahasa\nIsyarat</item>
    </string-array>
    <string-array name="data_item_home_message">
        <item>Yuk belajar dengan giat !</item>
        <item>Berani selesaikan quiz ?</item>
    </string-array>
    <integer-array name="data_item_home_image">
        <item>@drawable/image_grad</item>
        <item>@drawable/image_book</item>
    </integer-array>

    <!--list card article-->
    <string-array name="data_article_title">
        <item>Ilmuan Temukan\nPotensi Bahasa\nIsyarat?</item>
        <item>Tangan Ikut\nBergerak\nSaat Bicara?</item>
        <item>Apa Itu\nBahasa\nIsyarat?</item>
        <item>Inilah Pendidik\nTuli sejak\n200 Tahun Lalu</item>
    </string-array>
    <string-array name="data_article_message">
        <item>Ilmuan Temukan Potensi Bahasa Isyarat\nyang Universal untuk Masyarakat Dunia</item>
        <item>Mengapa Tangan Ikut Bergerak\nSaat Bicara? Ini Kata Studi</item>
        <item>Cek Faktanya di Sini</item>
        <item>Sosok Ferdinand Berthier di Google Doodle, Pendidik Tuli sejak 200 Tahun Lalu</item>
    </string-array>
    <integer-array name="data_article_image">
        <item>@drawable/image_book</item>
        <item>@drawable/image_article_2</item>
        <item>@drawable/image_grad</item>
        <item>@drawable/image_article_4</item>
    </integer-array>
    <string-array name="data_article_link">
        <item>https://www.detik.com/edu/detikpedia/d-7081978/ahli-temukan-potensi-bahasa-isyarat-yang-universal-untuk-masyarakat-dunia</item>
        <item>https://www.detik.com/edu/detikpedia/d-6793881/mengapa-tangan-ikut-bergerak-saat-bicara-ini-kata-studi</item>
        <item>https://www.detik.com/edu/detikpedia/d-6648963/apa-itu-bahasa-isyarat-cek-faktanya-di-sini</item>
        <item>https://www.detik.com/edu/edutainment/d-6959269/sosok-ferdinand-berthier-di-google-doodle-pendidik-tuli-sejak-200-tahun-lalu</item>
    </string-array>

    <string-array name="gender_options">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string name="tips_camera">Arahkan kamera hingga tangan anda terlihat jelas, lalu tekan tombol untuk menangkap gambar</string>
    <string name="tv_header_message_quiz">Selesaikan semua quiz</string>
</resources>