<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_navy"
    tools:context=".ui.quiz.QuizResultFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/tv_title_quiz_result"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/iv_bg_quiz"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/iv_bg_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bg_quiz_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_message_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/tv_message_result_quiz"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_score"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg_quiz"
            app:layout_constraintStart_toStartOf="@+id/iv_bg_quiz"
            app:layout_constraintTop_toTopOf="@+id/iv_bg_quiz" />


        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tv_score"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg_quiz"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/iv_bg_quiz"
            app:layout_constraintTop_toTopOf="@+id/iv_bg_quiz" />

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:src="@drawable/ic_trophy_gold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bg_quiz"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg_quiz"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/iv_bg_quiz" />


        <Button
            android:id="@+id/btn_go_quiz"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btn_ok_quiz_result"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg_quiz"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/iv_bg_quiz"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg_quiz" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    

</FrameLayout>